Move c++ solutions to separate directories

--- a/01/c++/Makefile
+++ b/01/c++/Makefile
@@ -1,5 +1,5 @@
 prog: prog.cpp
-	g++ -o $@ -O2 -Wall -Wextra $<
+	g++ -o $@ -std=c++11 -O2 -Wall -Wextra $<
 
 test1: prog
 	./prog $@
@@ -8,10 +8,10 @@ test2: prog
 	./prog $@
 
 puzzle1: prog
-	./prog $@ < input.txt
+	./prog $@ < ../input.txt
 
 puzzle2: prog
-	./prog $@ < input.txt
+	./prog $@ < ../input.txt
 
 format:
 	clang-format -i prog.cpp
