--- a/10/python/Makefile
+++ b/10/python/Makefile
@@ -1,14 +1,18 @@
-test:
+test1:
 	@echo "test1.txt 3,4, 8"
 	@python3 prog.py < ../test1.txt
-	#@echo "test2.txt 5,8 33"
-	#@python3 prog.py < ../test2.txt
-	#@echo "test3.txt 1,2 35"
-	#@python3 prog.py < ../test3.txt
-	#@echo "test4.txt 6,3 41"
-	#@python3 prog.py < ../test4.txt
-	#@echo "test5.txt 11,13 210"
-	#@python3 prog.py < ../test5.txt
+test2:
+	@echo "test2.txt 5,8 33"
+	@python3 prog.py < ../test2.txt
+test3:
+	@echo "test3.txt 1,2 35"
+	@python3 prog.py < ../test3.txt
+test4:
+	@echo "test4.txt 6,3 41"
+	@python3 prog.py < ../test4.txt
+test5:
+	@echo "test5.txt 11,13 210"
+	@python3 prog.py < ../test5.txt
 
 puzzle:
 	python3 prog.py < ../input.txt
